--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <!-- Write your code here! -->
+
+<h1></h1>
+<h1>My HTML adventure</h1>
+
+
+<p><strong><em><a href="https://developer.mozilla.org/en-US/docs/Web/HTML"></a></em></strong></p>
+
+<table></table>
+
+
